--- a/app/templates/quiz/create.hbs
+++ b/app/templates/quiz/create.hbs
@@ -9,45 +9,6 @@
                     <h3 class="box-title">{{pageTitle}}</h3>
                 </div><!-- /.box-header -->
                 <!-- form start -->
-                <form role="form">
-                    <div class="box-body">
-                        <div class="form-group">
-                            {{input type="text" value=model.name class="form-control" placeholder="Quiz  name" }}
-                        </div>
-                        <div class="form-group">
-                            {{input type="text" value=model.subject class="form-control" placeholder="Quiz  Subject" }}
-                        </div>
-                        <div class="form-group">
-                            {{input type="text" value=model.marks class="form-control" placeholder="Quiz  marks" }}
-                        </div>
-                        <div class="form-group">
-                            {{input type="text" value=model.passingRules class="form-control" placeholder="Quiz  passingRules" }}
-                        </div>
-                        <div class="form-group">
-                                <label for="exampleInputFile">Quiz desc</label> <small>Write something about quiz</small>
-                              {{textarea type="text" value=model.description class="form-control" placeholder="Description"}}
-                        </div>
-
-                       {{task-item-deadline item=model title="Quiz Start Time" fieldName='fromDateTime' }}
-					             {{task-item-deadline item=model title="Quiz End Time" fieldName='toDateTime' }}
-
-                       <div class="form-group mtop10" >
-                         {{#power-select-multiple selected=selectedGroups options=myGroups  placeholder="Please, select Group"
-                              onchange=(action (mut selectedGroups))  as |attendees| }}
-                                {{attendees.name}}                          {{/power-select-multiple}}
-                      </div>
-
-                      <div class="form-group mtop10" >
-                        {{#power-select-multiple selected=selectedques options=myQuestions  placeholder="Please, select question"
-                             onchange=(action (mut selectedques))  as |ques| }}
-                               {{ques.title}}                          {{/power-select-multiple}}
-                     </div>
-
-	                    <div class="box-footer">
-	                        <button type="submit"  class="btn btn-primary" {{action 'upsertQuiz' model selectedGroups selectedques}} >save</button>
-                         <button  class="btn btn-default" {{action 'cancelClicked'}}>Cancel</button>
-	                    </div>
-                   </div><!-- /.box-body -->
-                </form>
+            {{quiz-form item=model saveQuiz="saveQuiz"}}
             </div><!-- /.box -->
          </div>
