--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,68 @@
-{{outlet}}
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+
+<section class="content-header">
+    <h1>
+        Question
+        <small>question</small>
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+        <li class="active">Question</li>
+    </ol>
+</section>
+
+    <!-- Main content -->
+<section class="content">
+    <div class="row">
+      <!-- Question UI -->
+        <div class="box box-primary">
+            <div class="box-header">
+                <h3 class="box-title">Create Question</h3>
+            </div><!-- /.box-header -->
+            <!-- form start -->
+            <form role="form">
+                <div class="box-body">
+                    <div class="form-group">
+                        <label>Question</label>
+                        <textarea class="form-control" value=model.questionDescription rows="3" placeholder="Enter ..."></textarea>
+                    </div>
+                    <div class="form-group">
+                      <label>Options</label>
+                        <ul class="answers">
+                          {{#each model.options as |option|}}
+                              <div class="row">
+                                  <div class="col-md-8">
+                                    <input type="text" value=option.value class="form-control" placeholder="Enter ..."/>
+                                  </div>
+                                  <div class="col-md-4">
+                                    <div class="box-tools">
+                                        Ans?
+                                        <input type="checkbox" value=option.isCorrectAnswer data-toggle="toggle" data-on="Yes"
+                                        data-off="No" data-onstyle="success" data-offstyle="danger" data-size="small">
+                                    </div>
+                                  </div>
+                              </div>
+                              <br>
+                          {{/each}}
+                        </ul>
+                    </div>
+
+                    <div>
+                      <button type="button" {{action "addOption"}} class="btn btn-primary">Add Option..</button>
+                    </div>
+
+                </div><!-- /.box-body -->
+
+                <div class="box-footer">
+                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="button" class="btn btn-danger">Cancel</button>
+                </div>
+            </form>
+        </div>
+
+
+
+    </div><!-- /.row -->
+  </section><!-- /.content -->
